<?xml version="1.0"?>
<package format="2">
  <name>dsv_slam</name>
  <version>0.1.0</version>
  <description>Bio-Inspired Divergent Stereo vSLAM — A robust visual SLAM framework for wide-FoV and accurate localization. Modified from OV²SLAM (https://github.com/ov2slam/ov2slam).</description>

  <maintainer email="maxime.ferrera@gmail.com">Maxime Ferrera</maintainer>
  <author email="hlkyss@example.com">Yunlong Jiang</author>

  <license>GPLv3</license>

  <url type="website">https://github.com/HLkyss/divergent-stereo-vslam</url>
  <url type="repository">https://github.com/HLkyss/divergent-stereo-vslam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
